DTGB-454: Fixed spacing issue.

--- a/components/41-organisms/related-box/_related-box.scss
+++ b/components/41-organisms/related-box/_related-box.scss
@@ -45,7 +45,6 @@ $bulb-image-width: 6rem;
 
       > h3 {
 
-        margin-top: 1.6rem;
         margin-bottom: .8rem;
 
         &:first-of-type {
